# luajit-lang-toolkit

./: .gitignore  LICENSE  Makefile  README.md  ast-const-eval.lua  bcread-file.lua  bytecode.lua  compile.lua  developer-notes.md  generator.lua  lexer.lua  lua-ast.lua  luacode-generator.lua  meson.build  meson_options.txt  operator.lua  parser.lua  reader.lua  rosetta-lexer.lua  run-lexer.lua  run-rosetta-lexer.lua  run.lua  syntax.lua
.github/: FUNDING.yml
lang/: Makefile  ast-validate.lua  ast_boolean_const_eval.lua  ast_const_eval.lua  ast_validate.lua  bcread.lua  bcsave.lua  bytecode.lua  compile.lua  generator.lua  id-generator.lua  lexer.lua  lua-ast.lua  lua_ast.lua  luacode-generator.lua  luacode_generator.lua  meson.build  operator.lua  parser.lua  reader.lua  util.lua
scripts/: bccmp.py  bcgen-test.py  test-bytecode-hex.py  test-bytecode.py  test-luacode-output.py  test-output.py
src/: Makefile  language-gs.c  language.c  language.h  language_bcloader.c  language_bcloader.h  language_loaders.c  language_loaders.h  lua-language-gs.c  lua-language-gs.h  luajit-x.c  meson.build
src/lang/: compile.lua
tests/: algo-qs.lua  assign-hazard-1.lua  assign-hazard-2.lua  closure-1.lua  closure-2.lua  closure-2B.lua  closure-3.lua  closure-3b.lua  comment-1.lua  comment-2.lua  comment-3.lua  concatenate-1.lua  concatenate-2.lua  embedded-comment-1.lua  expr-bracket-1.lua  expr-logical-1.lua  expr-logical-2.lua  expr-logical-3.lua  expr-prio-1.lua  expr-return-1.lua  expr-var-return-1.lua  fft-1.lua  for-statement-1.lua  for-statement-2.lua  for-statement-3.lua  for-statement-4.lua  forin-1.lua  forin-2.lua  forin-3.lua  forin-4.lua  func-assign-1.lua  func-assign-2.lua  func-assign-3.lua  func-declaration-1.lua  func-empty-1.lua  func-short-syntax-1.alias.lua  func-short-syntax-1.lua  func-short-syntax-2.alias.lua  func-short-syntax-2.lua  func-short-syntax-3.alias.lua  (+103 more)
tests/expect/: closure-2.expect1.txt  closure-2B.expect1.txt  closure-3.expect1.txt  closure-3b.expect1.txt  expr-logical-2.expect1.txt  expr-prio-1.expect1.txt  for-statement-3.expect1.txt  forin-3.expect1.txt  goto-for-1.expect1.txt  logical-tests-3.expect1.txt  logical-tests-4b.expect1.txt  logical-tests-5.expect1.txt  logical-value-1.expect1.txt  not-operator-3.expect1.txt  rand-init.expect1.txt  repeat-test-2.expect1.txt  send-epression-call-2.expect1.txt  sort-algo.expect1.txt  struct-assign-1.expect1.txt  table-4.expect1.txt  test-6.expect1.txt  test-9.expect1.txt
